Adds placeholder homepage text
Default home page text to use pre a/b test optimisation

--- a/about.html
+++ b/about.html
@@ -50,6 +50,7 @@
 			<div class="form-box padded">	
                 
                 				<h2>About Election Alerts</h2> 
+<h3>What is and Election Alert?</h4> 
 
 				
 <h4>Sed sit amet quam quis elit vestibulum tincidunt nec ut ex. Quisque nec arcu in lacus tempus condimentum ac quis erat. Morbi hendrerit consequat est, vitae dignissim urna malesuada eu. Curabitur lobortis dui ut lacus ultrices maximus.</h4>
