--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,8 @@
 	
 		<section>
 			<h1 class="logo"><a href="#"><img src="images/logo.png" alt="Subscribe" /></a></h1>
-			<h3>Sed sit amet tellus at justo eleifend egestas. Pellentesque eu nibh at nisi facilisis porta at id justo tellus at justo eleifend egestas. </h3> 
+			<h3>Election Alerts is free election reminder service. It helps you remember to vote.   </h3>
+            <p>Join the x people who have already signed up </p>
 		</section>
 		
 	</div>
@@ -59,8 +60,8 @@
 
 					<form id="signup" name="signup" method="post" novalidate="novalidate">
 					
-						<h2>Sign up here</h2>
-						<p>Subscribe and get your download.</p>					
+						<h2>Register here</h2>
+						<p>to recieve alerts </p>					
 
 						<div class="form-row">	 
 					        <input type="text" name="name" id="name" size="30" value="" required="" class="text login_input align-center"  placeholder="Your name">
@@ -69,7 +70,7 @@
 					        <input type="text" name="email" id="email" size="30" value="" required="" class="text login_input align-center"  placeholder="Your Email Address">
 					    </div>  
 						<div class="form-row">									    
-						    <input id="submit" type="submit" name="submit" value="Download Now!" class="btn btn-wide">
+						    <input id="submit" type="submit" name="submit" value="Sign Up" class="btn btn-wide">
 						</div>
 					    We will not forward your email address to any third party.
 					</form>	
