Big Hairy Update
Updates the logo file, updates the text on most pages, Updates  some
page names.

--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Election Alerts: Regsiter for election reminders today</title>
+	<title>Election Alerts: Register for election reminders today</title>
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />  
 	<link href="css/style.css" rel="stylesheet"/>   
@@ -20,7 +20,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li> 
-				<li><a href="donate.html">Donate</a></li> 
+				<li><a href="helpout.html">Help Out</a></li> 
 			</ul>
 			<div class="clearfix"></div>
 		</div>
@@ -31,9 +31,11 @@
 		<h2 class="menulink hamburger"><a href="#">Menu</a></h2>
 	
 		<section>
-			<h1 class="logo"><a href="#"><img src="images/logo.png" alt="Subscribe" /></a></h1>
-			<h3>Election Alerts is free election reminder service. It helps you remember to vote.   </h3>
-            <p>Join the x people who have already signed up </p>
+			<h1 class="logo"><a href="ndex.html"><img src="images/logo.png" alt="Subscribe" /></a></h1>
+            <h2>Election Alerts</h2>
+
+			<h3>A free service which helps you remember to vote.   </h3>
+            <a href="about.html">Tell me more</a>
 		</section>
 		
 	</div>
@@ -61,7 +63,7 @@
 					<form id="signup" name="signup" method="post" novalidate="novalidate">
 					
 						<h2>Register here</h2>
-						<p>to recieve alerts </p>					
+						<p>Join x people who have already signed up</p>					
 
 						<div class="form-row">	 
 					        <input type="text" name="name" id="name" size="30" value="" required="" class="text login_input align-center"  placeholder="Your name">
