--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 			<h1 class="logo"><a href="index.html"><img src="images/logo.png" alt="Subscribe" /></a></h1>
                         <h2>Election Alerts</h2>
 
-			<h3>So what is that all about? </h3> 
+			<h3>What is that all about? </h3> 
 		</section>
 		
 	</div>
@@ -71,7 +71,7 @@
 
 <p>Yes!</p> 
     
-    <p>Our target is to help 1 million people to vote. If you think you can help us to do that then we'd love to hear from you. Contact us <a href="mailto:scott@electionalerts.org">here</a>. 
+    <p>Our aim is to help 1 million people to vote. If you think you can help us to do that then we'd love to hear from you. Contact us <a href="mailto:scott@electionalerts.org">here</a>. 
     </p>
 					
 			</div>
