--- a/helpout.html
+++ b/helpout.html
@@ -35,7 +35,7 @@
 			<h1 class="logo"><a href="index.html"><img src="images/logo.png" alt="Subscribe" /></a></h1>
                         <h2>Election Alerts</h2>
 
-			<h3>Help us to reach out to more people.</h3> 
+			<h3>Help us reach out to more people.</h3> 
 		</section>
 		
 	</div>
