--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li> 
+                <li><a href="UpcomingElections.html">Election Dates</a></li> 
 				<li><a href="helpout.html">Help Out</a></li> 
 			</ul>
 			<div class="clearfix"></div>
@@ -31,7 +32,7 @@
 		<h2 class="menulink hamburger"><a href="#">Menu</a></h2>
 	
 		<section>
-			<h1 class="logo"><a href="ndex.html"><img src="images/logo.png" alt="Subscribe" /></a></h1>
+			<h1 class="logo"><a href="index.html"><img src="images/logo.png" alt="Subscribe" /></a></h1>
             <h2>Election Alerts</h2>
 
 			<h3>A free service which helps you remember to vote.   </h3>
