--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -21,6 +21,8 @@
                 
                 <li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li> 
+                <li><a href="UpcomingElections.html">Election Dates</a></li> 
+
 				<li><a href="helpout.html">Help Out</a></li> 
 			</ul>
 			<div class="clearfix"></div>
