Updates Help Out Page

--- a/helpout.html
+++ b/helpout.html
@@ -22,6 +22,9 @@
                 <li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li> 
                 <li><a href="UpcomingElections.html">Election Dates</a></li> 
+
+                <li><a href="UpcomingElections.html">Election Dates</a></li> 
+
 				<li><a href="helpout.html">Help Out</a></li> 
 			</ul>
 			<div class="clearfix"></div>
@@ -61,7 +64,7 @@
 <p>Vivamus arcu massa, semper sed pharetra consequat, semper in ipsum. Phasellus et maximus diam. Donec sit amet tempus magna, sit amet sollicitudin nisl. Duis vestibulum et tellus et faucibus. Morbi et urna id est porttitor elementum id cursus ligula. Vestibulum lectus lorem, elementum vitae ornare vitae, placerat vel orci.</p>
 
                 
-<h2>Get in touch</h2> 
+<a href="mailto:scott@electionalerts.org"><h3>Get in touch</h3> </a>. 
 
 
 					
