Updates homepage instructions

--- a/Index.html
+++ b/Index.html
@@ -33,15 +33,15 @@
 	
 		<section>
 			<h1 class="logo"><a href="index.html"><img src="images/logo.png" alt="Subscribe" /></a></h1>
-            <h2>Election Alerts</h2>
+            <h2><strong>Election Alerts</strong></h2>
 
 			<h3>A free service which helps you remember to vote.   </h3>
             				<div class="line"></div>
 
-            <h3><strong>Step 1</strong> </h3>
-                <h3> Enter your details</h3>
-			<h3><strong>Step 2</strong> </h3>
-                <h3>Be reminded to vote</h3>
+            <h4><strong>Step 1</strong> Enter your details</h4>
+                <h3> </h3>
+			<h4><strong>Step 2</strong> Be alerted </h4>
+                <h3></h3>
 
             <a href="about.html">Tell me more</a>
 		</section>
