Updates about, heliport and upcoming electionscopy

--- a/UpcomingElections.html
+++ b/UpcomingElections.html
@@ -37,7 +37,7 @@
 			<h1 class="logo"><a href="index.html"><img src="images/logo.png" alt="Subscribe" /></a></h1>
                         <h2>Election Alerts</h2>
 
-			<h3>We remember when the elections are taking place so you don't have to. Here are the dates for your diary</h3> 
+			<h3>We remember when the elections are taking place so you don't have to.</h3> 
 		</section>
 		
 	</div>
