--- a/Index.html
+++ b/Index.html
@@ -70,14 +70,14 @@
 
 					<form id="signup" name="signup" method="post" novalidate="novalidate">
 					
-						<h2>Register here</h2>
+						<!--<h2>Register here</h2>-->
 						<p></p>				
 
 						<div class="form-row">	 
 					        <input type="text" name="name" id="name" size="30" value="" required="" class="text login_input align-center"  placeholder="Your name">
 					    </div>
 						<div class="form-row">									     
-					        <input type="text" name="email" id="email" size="30" value="" required="" class="text login_input align-center"  placeholder="Your Email Address">
+					        <input type="text" name="email" id="email" size="30" value="" required="" class="text login_input align-center"  placeholder=" Email Address">
                             
 					    </div>  
 						<div class="form-row">									    
