Changes Signup notification

--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,7 @@
 
             <h4><strong>Step 1</strong> Enter your details</h4>
                 <h3> </h3>
-			<h4><strong>Step 2</strong> Be alerted </h4>
+			<h4><strong>Step 2</strong> Get alerts </h4>
                 <h3></h3>
 
             <a href="about.html">Tell me more</a>
