Updates postcode css

--- a/Index.html
+++ b/Index.html
@@ -82,9 +82,8 @@
 	<label for="mce-EMAIL">Email Address </label>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 </div>
-<div class="mc-field-group">
-	<label for="mce-POSTCODE">Post Code </label>
-	<input type="text" value="" name="POSTCODE" class="required" id="mce-POSTCODE">
+<div class="form-row">
+	<input type="text" value="" name="POSTCODE" class="text login_input align-center" placeholder="Post Code" id="mce-POSTCODE">
 </div>
 	<div id="mce-responses" class="clear">
 		<div class="response" id="mce-error-response" style="display:none"></div>
