Updates name and email fields

--- a/Index.html
+++ b/Index.html
@@ -74,13 +74,11 @@
 <form action="//electionalerts.us3.list-manage.com/subscribe/post?u=beeba2120c2862e396d189b99&amp;id=9657f8ebb5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 	<h2></h2>
-<div class="mc-field-group">
-	<label for="mce-NAME">Name </label>
-	<input type="text" value="" name="NAME" class="required" id="mce-NAME">
+<div class="form-row">
+	<input type="text" value="" name="NAME" class="text login_input align-center" placeholder="Your Name"id="mce-NAME">
 </div>
-<div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address </label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+<div class="form-row">
+	<input type="email" value="" name="EMAIL" class="text login_input align-center" placeholder="Email Address" id="mce-EMAIL">
 </div>
 <div class="form-row">
 	<input type="text" value="" name="POSTCODE" class="text login_input align-center" placeholder="Post Code" id="mce-POSTCODE">
