Updates page metadata

--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Election Alerts: Register for election reminders today</title>
+	<title>Election Alerts: Free election reminders </title>
+    <meta name="Description" content="Never miss another election. Sign up today" />
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />  
 	<link href="css/style.css" rel="stylesheet"/>   
