--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>About</title>
+    <meta name="Description" content="About Election Alerts" />
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />  
 	<link href="css/style.css" rel="stylesheet"/>   
