--- a/helpout.html
+++ b/helpout.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Donate</title>
+	<title>Help Out</title>
+    <meta name="Description" content="Help us reach 1m voters" />
+
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />  
 	<link href="css/style.css" rel="stylesheet"/>   
