--- a/Index.html
+++ b/Index.html
@@ -36,15 +36,10 @@
 			<h1 class="logo"><a href="index.html"><img src="images/logo.png" alt="Subscribe" /></a></h1>
             <h2><strong>Election Alerts</strong></h2>
 
-			<h3>Free alerts which help you remember to vote.</h3>
+			<h3>We remember when the elections are taking place so you don't have to.</h3>
             				<div class="line"></div>
 
-            <h4><strong>Step 1</strong> Enter your details</h4>
-                <h3> </h3>
-			<h4><strong>Step 2</strong> Be alerted </h4>
-                <h3></h3>
 
-            <a href="about.html">Tell me more</a>
 		</section>
 		
 	</div>
@@ -89,7 +84,7 @@
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;"><input type="text" name="b_beeba2120c2862e396d189b99_9657f8ebb5" tabindex="-1" value=""></div>
-    <div class="form-row"><input type="submit" value="Done" name="subscribe" id="mc-embedded-subscribe" class="btn btn-wide ></div>
+    <div class="form-row"><input type="submit" value="Alert me !" name="subscribe" id="mc-embedded-subscribe" class="btn btn-wide ></div>
     </div>
 </form>
 </div>
