--- a/helpout.html
+++ b/helpout.html
@@ -55,11 +55,8 @@
 			<div class="form-box padded">		
 				
 
-<h2>We want to to remind 1 million people to vote.</h2> <h4>Do you think you can help us?.</h4> 
+<h2>We want to to remind 1 million people to vote.</h2> <h4>Do you think you can help?</h4> 
   
-
-<p>Helping this many people remember to vote is not going to be easy. If you think you can help we'd love to hear from you. </p>
-
                 
 <a href="mailto:scott@electionalerts.org"><h3>Get in touch</h3> </a>. 
 
